--- a/src/main/resources/templates/formEvento.html
+++ b/src/main/resources/templates/formEvento.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Adicionar Evento</h1>
-	<form action="">
+	<form action="/formsubimetido" method="post">    
 		<div>
 			<label>Nome: </label> <input type="text" name="nome">
 		</div>
