--- a/src/main/resources/templates/eventos/detalhes.html
+++ b/src/main/resources/templates/eventos/detalhes.html
@@ -5,6 +5,7 @@
 <!-- Compiled and minified CSS -->
     <link rel="stylesheet" 
     	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <title>Eventos</title>
 </head>
 <body>
@@ -69,6 +70,7 @@
 									 <td th:text="${c.id}">1</td>
 									 <td th:text="${c.nome}">Maria</td>
 									 <td th:text="${c.rg}">123</td>
+									 <td><a th:href="@{/eventos/{idEvento}/convidados/{idConvidado}/remover(idEvento=${evento.id}, idConvidado=${c.id})}"><i class="material-icons">delete</i></a></td>
 								 </tr>
 							 </tbody>
 						</table>
