--- a/src/main/resources/templates/eventos/detalhes.html
+++ b/src/main/resources/templates/eventos/detalhes.html
@@ -62,6 +62,8 @@
      			<div class="card">
         			<div class="card-content">
           				<span class="card-title">Convidados</span>
+          				
+          				<p th:if="${mensagem}" th:text="${mensagem}"></p>
           				<table class="highlight">
 							 <thead>
 								 <tr>
